2004-08-13  Kjartan Maraas  <kmaraas@gnome.org>

	* configure.in: Added nb to ALL_LINGUAS.

2004-08-11  J.H.M. Dassen (Ray) <jdassen@debian.org>

	* configure.in: Added gobject-2.0 to the PKG_CHECK_MODULES for LIBGNOME
	so all libgnome's symbol references are resolvable (i.e. it builds 
	with LDFLAGS=-Wl,-z,defs).

2004-08-11  Alexander Larsson  <alexl@redhat.com>

	* libgnome/gnome-i18n.c (gnome_i18n_get_language_list):
	Upe bonobo_activation_i18n_get_language_list() to avoid
	duplication of local alias tables.

==================== 2.7.2 ====================

Mon Jul 19 23:18:19 2004  Jonathan Blandford  <jrb@gnome.org>

	* configure.in: Release 2.7.2

2004-07-04  Gustavo J. A. M. Carneiro  <gustavo@users.sourceforge.net>

	* libgnome/gnome-program.h: Add prototype for
	gnome_program_init_paramv.

	* libgnome/gnome-program.c (gnome_program_init_common): Rename
	from gnome_program_initv; Add parameters 'nparams', 'params';
	Allow instantiation of the GnomeProgram using either
	g_object_new_valist or g_object_newv, depending on the supplied
	arguments.
	(gnome_program_initv): Delegates to gnome_program_init_common().
	(gnome_program_init_paramv): New function, GParameter variant of
	gnome_program_init. Delegates to gnome_program_init_common().

2004-06-08  Pawan Chitrakar  <pawan@nplinux.org>

	* configure.in: Added "ne" Nepali in ALL_LINGUAS

==================== 2.7.1 ====================

2004-05-31  Anders Carlsson  <andersca@gnome.org>

	* configure.in: Release 2.7.1

	* NEWS: Update

2004-05-30  Anders Carlsson  <andersca@gnome.org>

	* schemas/desktop_gnome_lockdown.schemas.in: Fix grammar,
	#137200, Dafydd Harries.

2004-05-15  Kjartan Maraas  <kmaraas@gnome.org>

	* libgnome/gnome-program.c: (gnome_program_instance_init):
	Commit a fix for broken sound events. Investigation and fix
	by Colin Walters <walters at redhat com>. Should fix
	bug #142502.

2004-05-13  James Henstridge  <james@daa.com.au>
